--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
+    "@material-ui/core": "^4.11.3",
     "@types/styled-components": "^5.1.5",
     "isomorphic-unfetch": "^3.1.0",
     "next": "^10.0.3",
